# WinBle

./: .gitignore  README.md
src/: CMakeLists.txt
src/WinBleLib/: BleDeviceEnumerator.cpp  BleFunctions.h  BleGattCharacteristic.cpp  BleGattCharacteristic.h  BleGattCharacteristicValue.h  BleGattDescriptor.h  BleGattDescriptorValue.h  BleGattService.h  CallbackContext.h  Utility.cpp
src/WinBleTest/: WinBleTest.vcxproj
src/mingw/include/: bluetoothleapis.h
